--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,3 +25,22 @@ ul {
     list-style: none;
     display: flex;
 }
+
+section.prodotti {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 3rem 15rem;
+}
+
+article {
+    width: calc((100% / 3) - 1.5rem);
+    padding-bottom: 5rem;
+    border: .5rem solid black;
+}
+
+article img {
+    width: 100%;
+    object-fit: cover;
+    height: 100%
+}
