--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,14 +7,20 @@
 body {
     margin: auto;
     max-width: 1920px;
+    font-family: sans-serif;
 }
 
-
-header {
+.nav-disp {
     display: flex;
     justify-content: space-around;
-    background-color: #ff6900;
+    align-items: center;
     padding: 1rem;
+    color: white;
+}
+
+header {
+    background-color: #ff6900;
+
 }
 
 header img {
@@ -24,6 +30,12 @@ header img {
 ul {
     list-style: none;
     display: flex;
+}
+
+li {
+    font-size: 1rem;
+    font-weight: 700;
+    padding-right: .5rem;
 }
 
 section.prodotti {
@@ -43,4 +55,8 @@ article img {
     width: 100%;
     object-fit: cover;
     height: 100%
+}
+
+footer {
+    background-color: #1a1a1a;
 }
