--- a/CSS/style.css
+++ b/CSS/style.css
@@ -40,21 +40,34 @@ li {
 
 section.prodotti {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-wrap: wrap;
-    padding: 3rem 15rem;
+    padding: 3rem 16rem;
 }
 
 article {
     width: calc((100% / 3) - 1.5rem);
     padding-bottom: 5rem;
-    border: .5rem solid black;
+    position: relative;
 }
 
 article img {
     width: 100%;
     object-fit: cover;
     height: 100%
+}
+
+article .fav-box {
+    position: absolute;
+    top: 10px;
+    right: 0;
+    width: 50px;
+    height: 50px;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.2rem;
 }
 
 footer {
