--- a/CSS/style.css
+++ b/CSS/style.css
@@ -57,17 +57,48 @@ article img {
     height: 100%
 }
 
-article .fav-box {
+.box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+article .fav {
     position: absolute;
     top: 10px;
     right: 0;
     width: 50px;
     height: 50px;
     background-color: rgb(255, 255, 255);
-    display: flex;
-    justify-content: center;
-    align-items: center;
     font-size: 2.2rem;
+}
+
+article .discount {
+    position: absolute;
+    bottom: 122px;
+    left: 0;
+    height: 25px;
+    width: 50px;
+    background-color: #ff0000;
+    color: white;
+    font-size: .9rem;
+    font-weight: 600;
+}
+
+article .sost {
+    position: absolute;
+    bottom: 122px;
+    left: 55px;
+    height: 25px;
+    width: 100px;
+    background-color: #008000;
+    color: white;
+    font-size: .9rem;
+    font-weight: 600;
+}
+
+article .sost:last-child {
+    left: 0;
 }
 
 footer {
